# eternal_path_books_chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: secrets.toml
faiss_index/: index.faiss  index.pkl
ipynb file/: Untitled27.ipynb
qa/: ingestion.py  retrieval_and_generation.py
qasystem.egg-info/: PKG-INFO  SOURCES.txt
